[project]
name = "miniature-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.34.0",
    "matplotlib>=3.10.5",
    "mpmath<1.3.0",
    "numpy>=2.2.6",
    "ruff>=0.12.8",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "tyro>=0.9.28",
]

[tool.ruff]
ignore = ["E731"]
lint.select = ["E", "F", "I"]
line-length = 100
